# crust

./: .gitignore  Cargo.toml  PKGBUILD  README.md  install.sh  pyproject.toml  requirements.txt
.crust/: aliases.py  cmds.py  cohere-api-key.txt  prompt.py
docs/: README.md  api-reference.md  configuration.md  installation.md  overview.md  troubleshooting-guide.md  user-guide.md
src/: aur_check.py  cd.py  cohere-api-key.txt  ctnp.py  lang.py  main.py
